// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders bare card 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-lg bg-surface shadow-elev-1 ease-[var(--ease-out-soft)] transition-shadow duration-200 hover:shadow-neu-hover"
  >
    content
  </div>
</div>
`;

exports[`Card > renders full composition 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-lg bg-surface shadow-elev-1 ease-[var(--ease-out-soft)] transition-shadow duration-200 hover:shadow-neu-hover"
  >
    <div
      class="flex items-start justify-between gap-4 px-6 pb-3 pt-6"
    >
      <h3
        class="text-2xs font-medium uppercase tracking-[0.12em] text-ink-dim"
      >
        Funil
      </h3>
    </div>
    <div
      class="px-6 pb-6"
    >
      Corpo
    </div>
    <div
      class="px-6 py-3 text-xs text-ink-muted shadow-[inset_0_1px_0_0_hsl(var(--hairline)/0.5)]"
    >
      rodapé
    </div>
  </div>
</div>
`;
